test/files/neg/macro-invalidusage-expands-to-apply-b.check
Macros_Test_2.scala:7: error: too many arguments for constructor C: (x: Int)C
  class D extends Foo(2)
                  ^
one error found
